Refactoring - Comparable logic of Tile